--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,27 +8,27 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Shopping.com</title>
+    <title>Shopping.com/Admin</title>
   </head>
-  <body style="background-color: blueviolet;">
+  <body style="background-color: rgb(226, 43, 43);">
     <header style="background-color: lightgreen;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: yellow;">
             <div class="container-fluid" style="background-color: yellowgreen;">
-              <a class="navbar-brand" href="#">Shopping .com</a>
+              <a class="navbar-brand" href="#">Shopping .com/Admin</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/viewproducts" action="">All products</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">All products</a>
+                    <a class="nav-link" href="#">All users</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Menu
+                      menu
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Action</a></li>
@@ -50,26 +50,7 @@
           </nav>
     </header>
     <section>
-      <div class="container mt-5">
-      <div class="row">
-
-        {% for item in items %}
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;">
-            <img src={{item.address}}>
-            <div class="card-body">
-              <h5 class="card-title">{{item.name}}</h5>
-              <p class="card-text">{{item.doc}}</p>
-              <a href="#" class="btn btn-primary">BUY NOW</a>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-        
-        
-        
-        
-      </div>
+       
     </section>
   </div>
 
