--- a/templates/add product.html
+++ b/templates/add product.html
@@ -1,16 +1,10 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Shopping.com/Admin</title>
-  </head>
-  <body style="background-color: rgb(226, 43, 43);">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Add products Shopping.com</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+</head>
+<body style="background-color: aqua;">
     <header style="background-color: lightgreen;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: yellow;">
             <div class="container-fluid" style="background-color: yellowgreen;">
@@ -49,43 +43,32 @@
             </div>
           </nav>
     </header>
-    <section>
-      <div class="row">
-        <a href="/add products" class="btn btn-success ml-auto">Add products</a>
+
+
+  <div class="container mt-5">
+    <h2>Add products</h2>
+    <form enctype="multipart/form-data" action="/submit" method="POST">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" id="name" placeholder="Enter the name of product">
       </div>
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">image</th>
-                <th scope="col">name</th>
-                <th scope="col">about</th>
-                <th scope="col">category</th>
-              </tr>
-            </thead>
-            <tbody>
-              
-              {% for item in items %}
-              <tr>
-                <th scope="row" style="width: 50px; height: 50px;"><img src={{item.address}}></th>
-                <td>{{item.name}}</td>
-                <td>{{item.doc}}</td>
-                <td>{{item.category}}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-    </section>
+      <div class="form-group">
+        <label for="email">Price</label>
+        <input type="text" class="form-control" id="price" placeholder="Enter about the product">
+      </div>
+      <div class="form-group">
+        <label for="message">category</label>
+        <input type="text" class="form-control" id="category" placeholder="Enter the product category">
+      </div>
+      <div class="form-group">
+        <label for="message">image address</label>
+        <input type="file" class="form-control" id="image" placeholder="Enter the product image">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
 </html>
