mondo db connceted

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
 
     <title>Shopping.com/Admin</title>
   </head>
-  <body style="background-color: rgb(226, 43, 43);">
+  <body style="background-color: rgb(226, 43, 43);" b>
     <header style="background-color: lightgreen;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: yellow;">
             <div class="container-fluid" style="background-color: yellowgreen;">
