--- a/templates/add product.html
+++ b/templates/add product.html
@@ -50,19 +50,19 @@
     <form enctype="multipart/form-data" action="/submit" method="POST">
       <div class="form-group">
         <label for="name">Name:</label>
-        <input type="text" class="form-control" id="name" placeholder="Enter the name of product">
+        <input type="text" class="form-control" id="name" name="name" placeholder="Enter the name of product">
       </div>
       <div class="form-group">
         <label for="email">Price</label>
-        <input type="text" class="form-control" id="price" placeholder="Enter about the product">
+        <input type="text" class="form-control" name="price" id="price" placeholder="Enter about the product">
       </div>
       <div class="form-group">
         <label for="message">category</label>
-        <input type="text" class="form-control" id="category" placeholder="Enter the product category">
+        <input type="text" class="form-control" id="category" name="category" placeholder="Enter the product category">
       </div>
       <div class="form-group">
         <label for="message">image address</label>
-        <input type="file" class="form-control" id="image" placeholder="Enter the product image">
+        <input type="file" class="form-control" id="image" name="image" placeholder="Enter the product image">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
