--- a/templates/add product.html
+++ b/templates/add product.html
@@ -62,7 +62,7 @@
       </div>
       <div class="form-group">
         <label for="message">image address</label>
-        <input type="file" class="form-control" id="image" name="image" placeholder="Enter the product image">
+        <input type="text" class="form-control" id="image" name="image" placeholder="Enter the address of the product image">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
