--- a/templates/index.html
+++ b/templates/index.html
@@ -54,12 +54,12 @@
       <div class="row">
 
         {% for item in items %}
-        <div class="col-md-3">
+        <div class="col-md-3 p-3">
           <div class="card" style="width: 18rem;">
-            <img src={{item.address}}>
+            <img src={{item.image}}>
             <div class="card-body">
               <h5 class="card-title">{{item.name}}</h5>
-              <p class="card-text">{{item.doc}}</p>
+              <p class="card-text">{{item.price}}</p>
               <a href="#" class="btn btn-primary">BUY NOW</a>
             </div>
           </div>
