--- a/templates/view products.html
+++ b/templates/view products.html
@@ -66,7 +66,7 @@
               
               {% for item in items %}
               <tr>
-                <th scope="row" style="width: 50px; height: 50px;"><img src=src="item.image" alt="Image"></th>
+                <th scope="row" style="width: 50px; height: 50px;"><img src={{item.image}} alt="Image"></th>
                 <td>{{item.name}}</td>
                 <td>{{item.price}}</td>
                 <td>{{item.category}}</td>
