--- a/templates/admin.html
+++ b/templates/admin.html
@@ -50,7 +50,26 @@
           </nav>
     </header>
     <section>
-       
+      <div class="container mt-5">
+        <div class="row">
+  
+          {% for item in items %}
+          <div class="col-md-3 p-3">
+            <div class="card" style="width: 18rem;">
+              <img src={{item.image}}>
+              <div class="card-body">
+                <h5 class="card-title">{{item.name}}</h5>
+                <p class="card-text">{{item.price}}</p>
+                <a href="#" class="btn btn-primary">ADD TO CART</a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          
+          
+          
+          
+        </div>
     </section>
   </div>
 
