--- a/templates/view products.html
+++ b/templates/view products.html
@@ -58,7 +58,7 @@
               <tr>
                 <th scope="col">image</th>
                 <th scope="col">name</th>
-                <th scope="col">about</th>
+                <th scope="col">price</th>
                 <th scope="col">category</th>
               </tr>
             </thead>
