--- a/templates/admin.html
+++ b/templates/admin.html
@@ -32,6 +32,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="/deletepage">Delete product</a></li>
+                       <li><a class="dropdown-item" href="/editproduct">edit product</a></li>
                       
                     </ul>
                   </li>
