--- a/templates/order.html
+++ b/templates/order.html
@@ -15,6 +15,33 @@
 
         <p class="lead">Thank you for your order!</p>
         <p>Please select a payment method:</p>
+        <div class="container">
+            <h1 class="text-center">Enter Your Address</h1>
+            <form>
+                <div class="form-group">
+                    <label for="street">Street Address</label>
+                    <input type="text" class="form-control" id="street" placeholder="Enter street address" required>
+                </div>
+                <div class="form-group">
+                    <label for="city">City</label>
+                    <input type="text" class="form-control" id="city" placeholder="Enter city" required>
+                </div>
+                <div class="form-group">
+                    <label for="state">State</label>
+                    <input type="text" class="form-control" id="state" placeholder="Enter state" required>
+                </div>
+                <div class="form-group">
+                    <label for="zip">ZIP Code</label>
+                    <input type="text" class="form-control" id="zip" placeholder="Enter ZIP code" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    
+    <div class="text-right">
+        <h4>Total: {{total}}</h4>
+        <a href="" class="btn btn-primary">Continue</a>
+    </div>
 
         <form action="/payment" method="post">
             <div class="form-check payment-option">
