--- a/templates/order.html
+++ b/templates/order.html
@@ -17,50 +17,42 @@
         <p>Please select a payment method:</p>
         <div class="container">
             <h1 class="text-center">Enter Your Address</h1>
-            <form>
+            <form action="/continue" method="POST">
                 <div class="form-group">
                     <label for="street">Street Address</label>
-                    <input type="text" class="form-control" id="street" placeholder="Enter street address" required>
+                    <input type="text" class="form-control" id="street" name="home" placeholder="Enter street address" required>
                 </div>
                 <div class="form-group">
                     <label for="city">City</label>
-                    <input type="text" class="form-control" id="city" placeholder="Enter city" required>
+                    <input type="text" class="form-control" id="city" name="city" placeholder="Enter city" required>
                 </div>
                 <div class="form-group">
                     <label for="state">State</label>
-                    <input type="text" class="form-control" id="state" placeholder="Enter state" required>
+                    <input type="text" class="form-control" id="state" name="state" placeholder="Enter state" required>
                 </div>
                 <div class="form-group">
                     <label for="zip">ZIP Code</label>
-                    <input type="text" class="form-control" id="zip" placeholder="Enter ZIP code" required>
+                    <input type="text" class="form-control" id="zip" name="code" placeholder="Enter ZIP code" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <h1>Payment method</h1>
+    
+                <div class="form-check payment-option">
+                    <input class="form-check-input" type="radio" name="payment_method" id="paypal" value="paypal">
+                    <label class="form-check-label" for="paypal">Razor pay</label>
+                </div>
+    
+                <div class="form-check payment-option">
+                    <input class="form-check-input" type="radio" name="payment_method" id="cash_on_delivery" value="cash_on_delivery">
+                    <label class="form-check-label" for="cash_on_delivery">Cash on Delivery</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Continue</button>
             </form>
         </div>
     
     <div class="text-right">
         <h4>Total: {{total}}</h4>
-        <a href="" class="btn btn-primary">Continue</a>
     </div>
 
-        <form action="/payment" method="post">
-            <div class="form-check payment-option">
-                <input class="form-check-input" type="radio" name="payment_method" id="credit_card" value="credit_card">
-                <label class="form-check-label" for="credit_card">Credit Card</label>
-            </div>
-
-            <div class="form-check payment-option">
-                <input class="form-check-input" type="radio" name="payment_method" id="paypal" value="paypal">
-                <label class="form-check-label" for="paypal">PayPal</label>
-            </div>
-
-            <div class="form-check payment-option">
-                <input class="form-check-input" type="radio" name="payment_method" id="cash_on_delivery" value="cash_on_delivery">
-                <label class="form-check-label" for="cash_on_delivery">Cash on Delivery</label>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Confirm Order</button>
-        </form>
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
