--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,6 +31,9 @@
         <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
       </div>
       <button type="submit" class="btn btn-primary" action="/signbutton">Signup</button>
+      {% if session["status2"]==True %}
+        <p class="error">{{"Email already exits"}}</p>
+      {% endif %}
     </form>
   </div>
 </body>
