order confirmation page

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                   </button>
                   <ul class="dropdown-menu">
                     {% if user %}
-                      <li><a class="dropdown-item" href="#">ORDERS</a></li>
+                      <li><a class="dropdown-item" href="/order">ORDERS</a></li>
                       <li><a class="dropdown-item" href="/logout">LOGOUT</a></li>
                     {% else %}
                       <li><a class="dropdown-item" href="/login">LOGIN</a></li>
